--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,8 +1,12 @@
 .home {
     height: 600px;
-    width: 100%;
+    max-width: 1440px;
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: dodgerblue;
 }
+
+.image {
+    width: 100%;
+}
+
