--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -5,8 +5,8 @@
     display: flex;
     align-items: center;
     width: 100%;
-    /* background-color: black; */
     padding: 0px 100px;
+    z-index: 1000;
 }
 
 .navbar li {
