--- a/src/styles/About.scss
+++ b/src/styles/About.scss
@@ -1,11 +1,15 @@
 .about {
-    position: relative;
-    background-image: url("/public/img/unsplash_rg1y72eKw6o.jpg");
+    max-width: 1440px;
+    margin: 0% auto;
+}
+
+.bg-about {
     width: 100%;
+    position: relative;
     height: 540px;
     background-repeat: no-repeat;
     background-position: center;
-    margin-top: 5.5rem;
+    background-image: url("/public/img/unsplash_rg1y72eKw6o.jpg");
 }
 
 .blur {
@@ -29,6 +33,16 @@
     line-height: 150%;
     text-align: center;
     color: #ffffff;
+}
+
+.about_us {
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    padding: 50px;
 }
 @media screen and (max-width: 1050px){
     .about {
